Mit SonarQube und GPT Codex Codequalität verbessert und debugged